--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 html,
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Karla', sans-serif;
   scroll-behavior: smooth;
   background: #000;
   padding: 0;
